--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,10 @@ jobs:
 
       - name: Build EXE
         run: |
-          pyinstaller --onefile --windowed --name "SecretQuest" quest.py
+          pyinstaller --onefile --windowed --name "SecretSanta" quest.py
 
       - name: Upload EXE as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: SecretQuest.exe
-          path: dist/SecretQuest.exe
+          name: SecretSanta.exe
+          path: dist/SecretSanta.exe
